--- a/config/database.yml
+++ b/config/database.yml
@@ -5,12 +5,13 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
+  adapter: sqlite3
   database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
@@ -18,11 +19,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: sqlite3
   database: db/test.sqlite3
 
 production:
   <<: *default
-  adapter: postgresql
-  database: d719sl41mcfpui
+  url: <%= ENV['DATABASE_URL'] %>
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   pool: 5
   timeout: 5000
